--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1197,7 +1197,7 @@
        "[800 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
        "Length: 800, dtype: bool"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,481 +1345,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>variable</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Dragon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Water</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Water</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Water</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Water</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Poison</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Poison</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>770</th>\n",
-       "      <td>Fairy</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>771</th>\n",
-       "      <td>Fighting</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>772</th>\n",
-       "      <td>Electric</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>773</th>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>774</th>\n",
-       "      <td>Dragon</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>775</th>\n",
-       "      <td>Dragon</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>776</th>\n",
-       "      <td>Dragon</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>777</th>\n",
-       "      <td>Steel</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>778</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>779</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>780</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>781</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>782</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>783</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>784</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>786</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>787</th>\n",
-       "      <td>Ghost</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Grass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>788</th>\n",
-       "      <td>Ice</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>789</th>\n",
-       "      <td>Ice</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>790</th>\n",
-       "      <td>Flying</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Dragon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>791</th>\n",
-       "      <td>Flying</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Dragon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>792</th>\n",
-       "      <td>Fairy</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793</th>\n",
-       "      <td>Dark</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>794</th>\n",
-       "      <td>Dragon</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Ground</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>795</th>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>796</th>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>797</th>\n",
-       "      <td>Psychic</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Ghost</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>798</th>\n",
-       "      <td>Psychic</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Dark</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>799</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Type 2</td>\n",
-       "      <td>Water</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>800 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Type 1 variable   value\n",
-       "0       Grass   Type 2  Poison\n",
-       "1       Grass   Type 2  Poison\n",
-       "2       Grass   Type 2  Poison\n",
-       "3       Grass   Type 2  Poison\n",
-       "4        Fire   Type 2     NaN\n",
-       "5        Fire   Type 2     NaN\n",
-       "6        Fire   Type 2  Flying\n",
-       "7        Fire   Type 2  Dragon\n",
-       "8        Fire   Type 2  Flying\n",
-       "9       Water   Type 2     NaN\n",
-       "10      Water   Type 2     NaN\n",
-       "11      Water   Type 2     NaN\n",
-       "12      Water   Type 2     NaN\n",
-       "13        Bug   Type 2     NaN\n",
-       "14        Bug   Type 2     NaN\n",
-       "15        Bug   Type 2  Flying\n",
-       "16        Bug   Type 2  Poison\n",
-       "17        Bug   Type 2  Poison\n",
-       "18        Bug   Type 2  Poison\n",
-       "19        Bug   Type 2  Poison\n",
-       "20     Normal   Type 2  Flying\n",
-       "21     Normal   Type 2  Flying\n",
-       "22     Normal   Type 2  Flying\n",
-       "23     Normal   Type 2  Flying\n",
-       "24     Normal   Type 2     NaN\n",
-       "25     Normal   Type 2     NaN\n",
-       "26     Normal   Type 2  Flying\n",
-       "27     Normal   Type 2  Flying\n",
-       "28     Poison   Type 2     NaN\n",
-       "29     Poison   Type 2     NaN\n",
-       "..        ...      ...     ...\n",
-       "770     Fairy   Type 2     NaN\n",
-       "771  Fighting   Type 2  Flying\n",
-       "772  Electric   Type 2   Fairy\n",
-       "773      Rock   Type 2   Fairy\n",
-       "774    Dragon   Type 2     NaN\n",
-       "775    Dragon   Type 2     NaN\n",
-       "776    Dragon   Type 2     NaN\n",
-       "777     Steel   Type 2   Fairy\n",
-       "778     Ghost   Type 2   Grass\n",
-       "779     Ghost   Type 2   Grass\n",
-       "780     Ghost   Type 2   Grass\n",
-       "781     Ghost   Type 2   Grass\n",
-       "782     Ghost   Type 2   Grass\n",
-       "783     Ghost   Type 2   Grass\n",
-       "784     Ghost   Type 2   Grass\n",
-       "785     Ghost   Type 2   Grass\n",
-       "786     Ghost   Type 2   Grass\n",
-       "787     Ghost   Type 2   Grass\n",
-       "788       Ice   Type 2     NaN\n",
-       "789       Ice   Type 2     NaN\n",
-       "790    Flying   Type 2  Dragon\n",
-       "791    Flying   Type 2  Dragon\n",
-       "792     Fairy   Type 2     NaN\n",
-       "793      Dark   Type 2  Flying\n",
-       "794    Dragon   Type 2  Ground\n",
-       "795      Rock   Type 2   Fairy\n",
-       "796      Rock   Type 2   Fairy\n",
-       "797   Psychic   Type 2   Ghost\n",
-       "798   Psychic   Type 2    Dark\n",
-       "799      Fire   Type 2   Water\n",
-       "\n",
-       "[800 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'get_dummies'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-cf2cc97f4eed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Pokemon('Type 1', 'Type 2').get_dummies\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mPokemon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dummies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprefix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Type 1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Type 2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5065\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5066\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5067\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5068\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5069\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'get_dummies'"
+     ]
     }
    ],
    "source": [
-    "Pokemon.melt('Type 1', 'Type 2')"
+    "#Pokemon('Type 1', 'Type 2').get_dummies\n",
+    "\n",
+    "Pokemon.get_dummies(df, prefix=['Type 1', 'Type 2'])"
    ]
   },
   {
