--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -12,12 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import reduce from functools, numpy and pandas\n",
-    "\n"
+    "\n",
+    "from functools import reduce\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -60,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    " m m   \n"
    ]
   },
   {
@@ -444,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
